# Depot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  deploy.sh  firmware.code-workspace
.github/workflows/: cmake.yml  depot.yml
cli2c.xcodeproj/: project.pbxproj
cli2c.xcodeproj/xcshareddata/xcschemes/: All.xcscheme  cli2c.xcscheme  matrix.xcscheme  segment.xcscheme
client/buttons/: Info.plist  main.c  main.h
client/cli2c/: Info.plist  main.c  main.h
client/cliwire/: Info.plist  main.c  main.h
client/common/: gpio.c  gpio.h  serialdriver.c  serialdriver.h  utils.c  utils.h
client/ds18b20/: Info.plist  ds18b20-Bridging-Header.h  main.c  main.h  main.swift
client/i2c/: i2cdriver.c  i2cdriver.h
client/matrix/: Info.plist  ht16k33-matrix.c  ht16k33-matrix.h  main.c  main.h
client/onewire/: owdriver.c  owdriver.h
client/segment/: Info.plist  ht16k33-segment.c  ht16k33-segment.h  main.c  main.h
client/sensor/: AppDelegate.swift  modems.c  modems.h  sensor-Bridging-Header.h  sensor.entitlements
client/sensor/Assets.xcassets/AppIcon.appiconset/: Contents.json
client/sensor/Base.lproj/: MainMenu.xib
cliwire.xcodeproj/: project.pbxproj
cliwire.xcodeproj/xcshareddata/xcschemes/: All.xcscheme  cliwire.xcscheme  ds18b20.xcscheme  sensor.xcscheme
examples/: cpu_chart_ltp305_cli2c.py  cpu_chart_matrix.py  cpu_chart_segment.py  mcp9808_temp_cli2c.py
firmware/common/: button.c  button.h  debug.c  debug.h  errors.h  gpio.c  gpio.h  i2c.c  i2c.h  led.c  led.h  onewire.c  onewire.h  serial.c  serial.h
firmware/nano/: CMakeLists.txt  main.c  main.h  nano_led.c  nano_led.h  pico_led.c  pico_led.h  pins.c
firmware/pico/: CMakeLists.txt  main.c  main.h  pico_led.c  pico_led.h  pins.c
firmware/promicro/: CMakeLists.txt  main.c  main.h  pins.c
firmware/qtpy/: CMakeLists.txt  main.c  main.h  pins.c  ws2812.c  ws2812.h
firmware/tiny/: CMakeLists.txt  main.c  main.h  pins.c  tiny_led.c  tiny_led.h
firmware/trinkey/: CMakeLists.txt  main.c  main.h  pins.c
linux/: CMakeLists.txt  app_version.in
protobuf/: depot.proto
scripts/: increment.py
